fix card height overflow

--- a/src/client/styles/builder.less
+++ b/src/client/styles/builder.less
@@ -42,7 +42,7 @@
 
 		.cardtext{
 			padding: 5px;
-			max-height: 190px;
+			max-height: 180px;
 			overflow-y: auto;
 			background: lightgray;
 		}
